# TutEngine

./: CMakeLists.txt  imgui.ini  roadmap.md
assets/: turtle.glb
engine/: main.cpp
engine/core/: component.h  registry.h  tutLib.h
engine/core/components/: animation.hx  animationComponent.hx  collider.cpp  collider.h  mesh.h  script.h  transform.cpp  transform.h
engine/core/misc/: debug.cpp  debug.h
engine/core/systems/: animationSys.cppx  animationSys.hx  inputManager.cpp  inputManager.h  renderSys.h  transformSys.h
engine/game/: player.cpp  player.h  tutel.cpp  tutel.h
engine/renderer/: model.cpp  model.h  renderer.cpp  renderer.h  shader.cpp  shader.h  wireframe.cpp  wireframe.h
engine/util/: ScriptCompiler.hpp  parser.cpp  parser.h  scene_loader.cpp  scene_loader.h  tokenizer.h  utils.cpp  utils.h
project/: scene.tut
project/entities/: tutel.tut
project/scripts/: Player.cpp  testScript.cpp
shaders/: basic.frag
